# inc-compilers

./: .gitignore  Cargo.toml  README.md  TODO
asm/: Cargo.toml
ast/: Cargo.toml
ch2/: Cargo.toml
ch2/src/: lib.rs  main.rs  pass.rs
ch2/src/pass/: anf.rs  assign.rs  assign_home.rs  control.rs  explicate_control.rs  instruction.rs  instruction_selection.rs  partial.rs  partial_evaluation.rs  patch.rs  patch_instructions.rs  perilogue.rs  remove_complex_operands.rs  select_instruction.rs  uniquify.rs
ch2/src/pass/snapshots/: ch2__pass__anf__tests__init_with_var.snap  ch2__pass__anf__tests__let_in_init.snap  ch2__pass__anf__tests__nested_prims.snap  ch2__pass__assign__tests__nested_prims.snap  ch2__pass__assign_home__tests__nested_prims.snap  ch2__pass__control__tests__let_in_init.snap  ch2__pass__control__tests__nested_prims.snap  ch2__pass__explicate_control__tests__let_in_init.snap  ch2__pass__explicate_control__tests__nested_prims.snap  ch2__pass__instruction__tests__nested_prims.snap  ch2__pass__instruction_selection__tests__nested_prims.snap  ch2__pass__partial__tests__fold_constant.snap  ch2__pass__partial__tests__nested_prims.snap  ch2__pass__partial__tests__nested_prims2.snap  ch2__pass__partial_evaluation__tests__cannot_fold_sub_rhs.snap  ch2__pass__partial_evaluation__tests__fold_constant.snap  ch2__pass__partial_evaluation__tests__nested_prims.snap  ch2__pass__partial_evaluation__tests__nested_prims2.snap  ch2__pass__patch__tests__nested_prims.snap  ch2__pass__patch_instructions__tests__nested_prims.snap  ch2__pass__remove_complex_operands__tests__init_with_var.snap  ch2__pass__remove_complex_operands__tests__let_in_init.snap  ch2__pass__remove_complex_operands__tests__nested_prims.snap  ch2__pass__select_instruction__tests__nested_prims.snap  ch2__pass__select_instruction__tests__single_read.snap  ch2__pass__uniquify__tests__let_form.snap  (+3 more)
ch2/src/snapshots/: ch2__tests__nested_prims.snap
ch2/tests/: cli.rs
ch2/tests/fixtures/: nested_prims  nested_prims.prog
ch3/: Cargo.toml
ch3/src/: lib.rs  location_graph.rs  location_set.rs  main.rs  pass.rs
ch3/src/pass/: interference.rs  liveness.rs  liveness_analysis.rs  move_biasing.rs  perilogue.rs  register.rs  register_allocation.rs
ch3/src/snapshots/: ch3__tests__move_biasing.snap  ch3__tests__nested_prims.snap  ch3__tests__spilled.snap
ch3/tests/: cli.rs
ch3/tests/fixtures/: spilled.prog
ch4/: Cargo.toml
ch4/src/: lib.rs  main.rs  pass.rs
ch4/src/pass/: anf.rs  explicate_control.rs  instruction_selection.rs  interference.rs  liveness_analysis.rs  merge_blocks.rs  merge_jumps.rs  move_biasing.rs  patch_instructions.rs  perilogue.rs  register_allocation.rs  remove_complex_operands.rs  select_instruction.rs  shrink.rs  typecheck.rs  uniquify.rs
ch4/src/snapshots/: ch4__tests__if_form.snap  ch4__tests__if_in_init.snap  ch4__tests__nested_if.snap
ch4/tests/: cli.rs
ch4/tests/fixtures/: complex_if.1.input  complex_if.4.input  complex_if.prog  simple_if.prog
ch5/: Cargo.toml
ch5/src/: lib.rs  main.rs  pass.rs
ch5/src/pass/: explicate_control.rs  instruction_selection.rs  liveness_analysis.rs  perilogue.rs  remove_complex_operands.rs  typecheck.rs  uncover_get.rs
ch5/src/snapshots/: ch5__tests__if_form.snap  ch5__tests__if_in_init.snap  ch5__tests__nested_if.snap  ch5__tests__while_loop.snap
ch5/tests/: cli.rs
ch5/tests/fixtures/: a.out  complex  complex.1.output  complex.2.output  complex.prog  simple_while.1.output  simple_while.prog
ch6/: Cargo.toml
ch6/src/: lib.rs  main.rs  pass.rs
ch6/src/pass/: array_bounds.rs  division.rs  explicate_control.rs  instruction_selection.rs  interference.rs  perilogue.rs  register_allocation.rs  string.rs  struct.rs  typecheck.rs
ch6/src/snapshots/: ch6__tests__example_in_book.snap  ch6__tests__vector.snap  ch6__tests__vector.snap.new
ch6/tests/: cli.rs
ch6/tests/fixtures/: .gitignore  array  array.1.output  array.prog  array_length_error.1.error  array_length_error.prog  array_ref_index_error.1.error  array_ref_index_error.2.error  array_ref_index_error.prog  array_set_index_error.1.error  array_set_index_error.2.error  array_set_index_error.prog  example  example_in_book.prog  example_in_book_struct.1.output  example_in_book_struct.prog  gcd.1.input  gcd.1.output  gcd.2.input  gcd.2.output  gcd.prog  loop.prog  string.1.output  string.prog
ch7/: Cargo.toml
ch7/src/: lib.rs  main.rs  pass.rs
ch7/src/pass/: explicate_control.rs  liveness_analysis.rs  parameter.rs  remove_complex_operands.rs  tailcall.rs  typecheck.rs  uniquify.rs
ch7/src/snapshots/: ch7__tests__call_arg_reg.snap  ch7__tests__example_in_book.snap  ch7__tests__mul_div.snap  ch7__tests__pass_functions.snap  ch7__tests__recursion.snap  ch7__tests__return_functions.snap
ch7/tests/: cli.rs
ch7/tests/fixtures/: even_odd.asm  even_odd.prog  example_in_book.asm  example_in_book.prog  fib.asm  fib.prog  pass_functions.2.output  pass_functions.asm  pass_functions.prog  vector-prod.asm  vector-prod.prog
runtime/: .gitignore  Cargo.toml  build.rs  runtime.asm  runtime.c  runtime.s
runtime/src/: lib.rs
(+129 files in other folders)
