[package]
name = "ch3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
asm = { path = "../asm" }
support = { path = "../support" }
ch2 = { path = "../ch2" }
indexmap = "1.6.1"
smallvec = "1.6.1"
num-traits = "0.2.14"
maplit = "1.0.2"

[dev-dependencies]
insta = "1.7.1"
pretty_assertions = "0.7.2"
assert_cmd = "1.0.7"
predicates = "2.0.0"
scopeguard = "1.1.0"