[package]
name = "ch4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
asm = { path = "../asm" }
support = { path = "../support" }
ch2 = { path = "../ch2" }
ch3 = { path = "../ch3" }
indexmap = "1.6.1"
num-traits = "0.2.14"
petgraph = "0.6.0"
priority-queue = "1.1.1"
once_cell = "1.5.2"
maplit = "1.0.2"

[dev-dependencies]
insta = "1.7.1"
pretty_assertions = "0.7.2"
