[package]
name = "ch4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
asm = { path = "../asm" }
support = { path = "../support" }
ch2 = { path = "../ch2" }
ch3 = { path = "../ch3" }
control = { path = "../control" }
indexmap = "1.8.1"
num-traits = "0.2.15"
petgraph = "0.6.0"
priority-queue = "1.2.1"
once_cell = "1.10.0"
maplit = "1.0.2"

[dev-dependencies]
insta = "1.14.0"
pretty_assertions = "1.2.1"
