[package]
name = "ch5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
asm = { path = "../asm" }
support = { path = "../support" }
ch2 = { path = "../ch2" }
ch3 = { path = "../ch3" }
ch4 = { path = "../ch4" }
control = { path = "../control" }
petgraph = "0.6.0"

[dev-dependencies]
insta = "1.8.0"
pretty_assertions = "1.0.0"
