[package]
name = "ch6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
ch2 = { version = "0.1.0", path = "../ch2" }
ch4 = { version = "0.1.0", path = "../ch4" }
ch5 = { version = "0.1.0", path = "../ch5" }
support = { version = "0.1.0", path = "../support" }

[dev-dependencies]
insta = "1.14.0"
